--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,6 @@
 		<module>ch03</module>
 		<module>ch04</module>
 		<module>ch05</module>
+		<module>javascript-practices</module>
 	</modules>
 </project>
