--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,7 @@
 		<module>ch04</module>
 		<module>ch05</module>
 		<module>javascript-practices</module>
+		<module>ch06</module>
+		<module>ch07</module>
 	</modules>
 </project>
