--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
 		<module>javascript-practices</module>
 		<module>ch06</module>
 		<module>ch07</module>
+		<module>ch08</module>
 	</modules>
 </project>
